--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* pseudo-classe */
+:root{
+    --input-linear: linear-gradient(120deg, #045485, #00c2cb);
+    --input-button: linear-gradient(120deg, #045485, #00c2cb, #045485);
+    --cor-tittle: #045485;
+    --height: 2px
+}
+
 body{
     margin: 0;
     font-family: sans-serif;
@@ -8,7 +16,7 @@ body{
     display: flex;
     justify-content: center; /*centraliza  de forma vertical(fica no topo)*/
     align-items: center; /*centraliza de forma horizontal(fica no centro)*/
-    background: linear-gradient(120deg, #045485, #00c2cb ) ; /*Dêgrade = gradient*/
+    background: var(--input-linear); /*Dêgrade = gradient*/
 }
 
 .login-container{
@@ -25,7 +33,7 @@ body{
 
 .login-title{
     margin-bottom: 30px;
-    color: #045485;
+    color: var(--cor-tittle);
 }
 
 .login-form{
@@ -47,7 +55,7 @@ body{
 
 .login-input-border{
     width: 100%;
-    height: 2px;
+    height: var(--height);
     background-color: #00c2cb;
     margin-bottom: 30px;
     transition: .3s ease-in;
@@ -59,8 +67,13 @@ body{
     height: 3px;
     width: 0;
     margin-bottom: 16px;
-    background: linear-gradient(120deg, #045485, #00c2cb);
+    background: var(--input-linear);
     transition: .3s ease-in;
+}
+
+/* efeito gradiente */
+.login-input:focus + .login-input-border::after{
+    width: 100%;
 }
 
 .login-submit{
@@ -68,7 +81,7 @@ body{
     height: 50px;
     border: unset;
     outline: none;
-    background: linear-gradient(120deg, #045485, #00c2cb);
+    background: var(--input-button);
     color: white;
     background-size: 200%;
     margin-bottom: 30px;
@@ -77,6 +90,11 @@ body{
     font-weight: bold;
     cursor: pointer;
     transition: .5s ease-in;
+}
+
+/* efeito de movimento de background para a direita */
+.login-submit:hover{
+    background-position: right;
 }
 
 .recuperar-senha{
